--- a/asPluginManager.ui
+++ b/asPluginManager.ui
@@ -29,9 +29,6 @@
    <string>asPluginManager</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="spacing">
-    <number>4</number>
-   </property>
    <property name="margin">
     <number>4</number>
    </property>
@@ -68,11 +65,11 @@ QCheckBox {
 	color: black;
 }</string>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_4">
-       <property name="spacing">
+      <layout class="QGridLayout" name="gridLayout" columnstretch="0">
+       <property name="margin">
         <number>2</number>
        </property>
-       <property name="margin">
+       <property name="spacing">
         <number>2</number>
        </property>
       </layout>
